--- a/.github/workflows/crawler.yml
+++ b/.github/workflows/crawler.yml
@@ -41,6 +41,14 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
           
+      - name: Restore cached data
+        uses: actions/cache@v3
+        with:
+          path: output
+          key: data-${{ github.run_id }}
+          restore-keys: |
+            data-
+
       - name: Verify required files
         run: |
           echo "🔍 检查必需的配置文件..."
@@ -79,6 +87,15 @@ jobs:
         env:
           BRANCH_NAME: ${{ github.event.repository.default_branch }}
         run: |
+          # 🕒 Time check: Only commit once a day (at 10 UTC / 18:00 Beijing)
+          # Skip this check for manual triggers (workflow_dispatch)
+          CURRENT_HOUR=$(date -u +%H)
+          if [ "${{ github.event_name }}" == "schedule" ] && [ "$CURRENT_HOUR" != "10" ]; then
+            echo "⏳ Current hour is $CURRENT_HOUR UTC. Commit is scheduled for 10 UTC (18:00 Beijing)."
+            echo "⏭️ Skipping commit step to reduce git history noise."
+            exit 0
+          fi
+
           git config --global user.name 'GitHub Actions'
           git config --global user.email 'actions@github.com'
           
